Add content about deterministic methods and ADVANTG

--- a/prelim/bibliography.bib
+++ b/prelim/bibliography.bib
@@ -1,4 +1,4 @@
-% MCNP
+% MCNP6.2
 @manual{mcnp620,
     title     = {MCNP Version 6.2 Release Notes},
     author    = {Christopher John Werner and Jeffrey S. Bull and C. J. Solomon
@@ -12,6 +12,17 @@
     month     = {February},
     publisher = {Los Alamos National Laboratory},
     number    = {LA-UR-18-20808}
+}
+
+% MCNP5 manual volume 1
+@manual{mcnp5_vol1,
+    title     = {MCNP --- A General Monte Carlo N-Particle Transport Code, Version 5; Volume I: Overview and Theory},
+    author    = {{X-5 Monte Carlo Team}},
+    place     = {United States},
+    year      = {2008},
+    month     = {February},
+    publisher = {Los Alamos National Laboratory},
+    number    = {LA-UR-03-1987}
 }
 
 % Denovo
@@ -34,6 +45,20 @@
     month     = {August},
     publisher = {Oak Ridge National Laboratory},
     number    = {ORNL/TM-2013/416}
+}
+
+% ENDF/B-VII.0
+@article{endfb7.0,
+    title     = {ENDF/B-VII.0: Next Generation Evaluated Nuclear Data Library for Nuclear Science and Technology},
+    journal   = {Nuclear Data Sheets},
+    volume    = {107},
+    number    = {12},
+    pages     = {2931-3060},
+    year      = {2006},
+    issn      = {0090-3752},
+    doi       = {10.1016/j.nds.2006.11.001},
+    url       = {http://www.sciencedirect.com/science/article/pii/S0090375206000871},
+    author    = {M.B. Chadwick and P. Obložinský and M. Herman and N.M. Greene and R.D. McKnight and D.L. Smith and P.G. Young and R.E. MacFarlane and G.M. Hale and S.C. Frankle and A.C. Kahler and T. Kawano and R.C. Little and D.G. Madland and P. Moller and R.D. Mosteller and P.R. Page and P. Talou and H. Trellue and M.C. White and W.B. Wilson and R. Arcilla and C.L. Dunford and S.F. Mughabghab and B. Pritychenko and D. Rochman and A.A. Sonzogni and C.R. Lubitz and T.H. Trumbull and J.P. Weinman and D.A. Brown and D.E. Cullen and D.P. Heinrichs and D.P. McNabb and H. Derrien and M.E. Dunn and N.M. Larson and L.C. Leal and A.D. Carlson and R.C. Block and J.B. Briggs and E.T. Cheng and H.C. Huria and M.L. Zerkle and K.S. Kozier and A. Courcelle and V. Pronyaev and S.C. {van der Marck}}
 }
 
 % Silo
