--- a/prelim/content/background-rt.tex
+++ b/prelim/content/background-rt.tex
@@ -17,8 +17,6 @@ Much of the information in this section is paraphrased from the textbook by Lewi
 \label{sec:bg:rt:te}
 %===============================================================================
 
-Placeholder
-
 %-------------------------------------------------------------------------------
 \subsubsection{Particle Distributions}
 \label{sec:bg:rt:te:pd}
@@ -141,8 +139,8 @@ The transport equation in operator notation is then simply
 
 Given an operator $H$ and the functions $\zeta$ and $\zeta^+$, the adjoint operator $H^+$ is defined by the \textit{adjoint identity}
 \begin{equation}\label{eq:bg:rt:adjoint-identity}
-  \left<\zeta^+H\zeta\right> =
-  \left<\zeta H^+\zeta^+\right>,
+  \left<\zeta^+,H\zeta\right> =
+  \left<\zeta,H^+\zeta^+\right>,
 \end{equation}
 where $\left<\right>$ denotes integration over all independent variables.
 
